@@ -3,15 +3,18 @@ package com.company.secureapispring.customer.controllers;
 
 import com.company.secureapispring.common.utils.TestJWTUtils;
 import com.company.secureapispring.customer.entities.Country;
+import com.company.secureapispring.customer.entities.StateProvince;
 import com.company.secureapispring.customer.factory.EntityFactory;
+import com.company.secureapispring.customer.repositories.CountryRepository;
+import com.company.secureapispring.customer.repositories.StateProvinceRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.hamcrest.Matchers.*;
@@ -22,62 +25,108 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 public class CountryControllerIT extends AbstractIT {
 
-    private static String ENDPOINT = "/countries";
+    private static final String ENDPOINT = "/countries";
+    private static final String STATE_PROVINCES_ENDPOINT = "/countries/%d/state-provinces";
 
     @Autowired
     private MockMvc mockMvc;
 
+    @Autowired
+    private CountryRepository countryRepository;
+
+    @Autowired
+    private StateProvinceRepository stateProvinceRepository;
+
     @Test
-    public void testGetWhenAuthenticated() throws Exception {
-        Country expected = EntityFactory
+    public void testFindAllCountriesWhenAuthenticated() throws Exception {
+        List<Country> expectedCountries = new ArrayList<>();
+        expectedCountries.add(EntityFactory
                 .country()
-                .build(this.emTest);
-        mockMvc.perform(get(CountryControllerIT.ENDPOINT + "/" + expected.getId())
-                        .header(HttpHeaders.AUTHORIZATION, "Bearer " + TestJWTUtils.encode("any")))
+                        .with(Country::setAbbreviation, "USA")
+                .persit(countryRepository));
+        expectedCountries.add(EntityFactory
+                .country()
+                .with(Country::setAbbreviation, "BRA")
+                .persit(countryRepository));
+        expectedCountries.add(EntityFactory
+                .country()
+                .with(Country::setAbbreviation, "CAN")
+                .persit(countryRepository));
+        expectedCountries.sort(Comparator.comparing(Country::getName));
+
+        mockMvc.perform(get(CountryControllerIT.ENDPOINT)
+                        .header(HttpHeaders.AUTHORIZATION, TestJWTUtils.getAuthHeader("any")))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("id", is(expected.getId())))
-                .andExpect(jsonPath("abbreviation", is(expected.getAbbreviation())))
-                .andExpect(jsonPath("name", is(expected.getName())));
+                .andExpect(jsonPath("$", hasSize(expectedCountries.size())))
+                .andExpect(jsonPath("[0].name", equalTo(expectedCountries.getFirst().getName())))
+                .andExpect(jsonPath(String.format(
+                        "[%d].name",
+                        expectedCountries.size()-1),
+                        equalTo(expectedCountries.getLast().getName())
+                ));
     }
 
     @Test
-    public void testGetWithoutAuthenticationThenFail() throws Exception {
-        Integer id = EntityFactory.getFaker().number().randomDigitNotZero();
-        mockMvc.perform(get(CountryControllerIT.ENDPOINT + "/" + id))
+    public void testFindAllCountriesWithoutAuthentication() throws Exception {
+        this.mockMvc.perform(
+                        get(CountryControllerIT.ENDPOINT)
+                )
+                .andDo(print())
                 .andExpect(status().isUnauthorized());
     }
 
-    @Test
-    public void testGetWhenAuthenticatedAndNotFoundThenFail() throws Exception {
-        Integer id = EntityFactory.getFaker().number().randomDigitNotZero();
-        mockMvc.perform(get(CountryControllerIT.ENDPOINT + "/" + id)
-                        .header(HttpHeaders.AUTHORIZATION, "Bearer " + TestJWTUtils.encode("any")))
-                .andExpect(status().isNotFound());
+    private String getBaseEndpointForStateProvinces(Integer countryId) {
+        return String.format(CountryControllerIT.STATE_PROVINCES_ENDPOINT, countryId);
     }
 
     @Test
-    public void testFindAllWhenAuthenticated() throws Exception {
-        List<Country> expected =  IntStream
-                .range(1, EntityFactory.getFaker().number().numberBetween(2, 5))
-                .mapToObj(n -> EntityFactory
-                        .country()
-                        .build(this.emTest)
-                )
-                .sorted(Comparator.comparing(Country::getName))
-                .collect(Collectors.toList());
-        int lastIndex = expected.size()-1;
-        mockMvc.perform(get(CountryControllerIT.ENDPOINT)
-                        .header(HttpHeaders.AUTHORIZATION, "Bearer " + TestJWTUtils.encode("any")))
+    public void testFindAllStateProvincesWhenAuthenticated() throws Exception {
+        Country country = EntityFactory
+                .country()
+                .persit(countryRepository);
+
+        List<StateProvince> expectedStateProvinces = new ArrayList<>();
+        expectedStateProvinces.add(EntityFactory
+                .stateProvince()
+                .with(StateProvince::setAbbreviation, "BC")
+                .with(StateProvince::setCountry, country)
+                .persit(stateProvinceRepository));
+        expectedStateProvinces.add(EntityFactory
+                .stateProvince()
+                .with(StateProvince::setAbbreviation, "AB")
+                .with(StateProvince::setCountry, country)
+                .persit(stateProvinceRepository));
+        expectedStateProvinces.add(EntityFactory
+                .stateProvince()
+                .with(StateProvince::setAbbreviation, "ON")
+                .with(StateProvince::setCountry, country)
+                .persit(stateProvinceRepository));
+        expectedStateProvinces.sort(Comparator.comparing(StateProvince::getName));
+
+        int lastIndex = expectedStateProvinces.size()-1;
+        mockMvc.perform(get(getBaseEndpointForStateProvinces(country.getId()))
+                        .header(HttpHeaders.AUTHORIZATION, TestJWTUtils.getAuthHeader("any")))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(expected.size())))
-                .andExpect(jsonPath("[0].name", equalTo(expected.get(0).getName())))
-                .andExpect(jsonPath(String.format("[%d].name", lastIndex), equalTo(expected.get(lastIndex).getName())));
+                .andExpect(jsonPath("$", hasSize(expectedStateProvinces.size())))
+                .andExpect(jsonPath("[0].name", equalTo(expectedStateProvinces.getFirst().getName())))
+                .andExpect(jsonPath("[0].country.id", is(country.getId())))
+                .andExpect(jsonPath(
+                        String.format("[%d].name", lastIndex),
+                        equalTo(expectedStateProvinces.getLast().getName())
+                ))
+                .andExpect(jsonPath(
+                        String.format("[%d].country.id", lastIndex),
+                        is(country.getId())
+                ));
     }
 
     @Test
-    public void testFindAllWithoutAuthentication() throws Exception {
+    public void testFindAllStateProvincesWithoutAuthentication() throws Exception {
+        Country country = EntityFactory
+                .country()
+                .persit(countryRepository);
         this.mockMvc.perform(
-                        get(CountryControllerIT.ENDPOINT)
+                        get(getBaseEndpointForStateProvinces(country.getId()))
                 )
                 .andDo(print())
                 .andExpect(status().isUnauthorized());
